<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/orderAce"
            android:icon="@drawable/ic_launcher_background"
            android:title="@string/orderace" />
        <item
            android:id="@+id/orderDec"
            android:icon="@drawable/ic_launcher_background"
            android:title="@string/orderdec" />
        <item
            android:id="@+id/delete"
            android:icon="@drawable/ic_launcher_background"
            android:title="@string/delete" />
        <item
            android:id="@+id/clearRecyclerData"
            android:icon="@drawable/ic_launcher_background"
            android:title="clearRecyclerData" />

    </group>

</menu>
