<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/customPost"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textAlignment="center"
        android:textSize="26dp"
        android:textColor="@color/black"
        android:id="@+id/logedOutTextView"
        android:text="@string/writePost"
        />

    <EditText
        android:id="@+id/postTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"/>
    <EditText
        android:id="@+id/postBody"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:hint="@string/what_s_in_your_mind"/>



</LinearLayout>