<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/AppTheme.NoActionBar"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginLogout.UserDetailsFragment">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:id="@+id/logedoutView"
    android:visibility="gone"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textAlignment="center"
        android:textSize="26dp"
        android:textColor="@color/black"
        android:id="@+id/logedOutTextView"
        android:text="@string/you_are_loged_out"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/loginButtonFragment"
        android:textColor="@color/black"
        android:textSize="26dp"
        android:background="@color/colorAccent"
        android:layout_margin="10dp"
        tools:ignore="OnClick" />
</LinearLayout>
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:id="@+id/containerOfAllViews"
        android:layout_height="match_parent"
        >

        <ListView
            android:id="@+id/userListView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            app:layout_constraintBottom_toTopOf="@id/logout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >
        </ListView>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Logout"
            android:id="@+id/logout"
            android:textColor="@color/black"
            android:textSize="26dp"
            android:background="@color/colorAccent"
            android:layout_margin="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/userListView"
            />

    </android.support.constraint.ConstraintLayout>
</FrameLayout>